--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<h1>SabrinaTaskApp</h1>
+<a [routerLink] ="['/']">Home</a> |
+<a [routerLink] ="['Lista']">Lista</a>
+<router-outlet></router-outlet>
