--- a/src/app/sabrina-home/sabrina-home.component.html
+++ b/src/app/sabrina-home/sabrina-home.component.html
@@ -5,3 +5,8 @@
 <p>
   <a href="https://github.com/Sabrina-barreiros" target="_blank">GitHub</a>
 </p>
+
+<p><b>Data / Hora: </b>
+
+  {{data1 | date: 'dd/MM/yyyy HH:mm'}}
+</p>
